--- a/viajes.html
+++ b/viajes.html
@@ -12,11 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <!-- bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   <!--Fontawensome-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
@@ -29,7 +26,7 @@
 <body>
   <!--Navbar-->
   <section>
-    <div class="navbar-section navbar navbar-inverse navbar-fixed-top navbar-expand-md px-5" role="navigation">
+    <div class="navbar-section navbar navbar-inverse navbar-fixed-top fixed-top navbar-expand-md px-5" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">
@@ -43,9 +40,9 @@
         <div id="navbar" class="collapse navbar-collapse justify-content-end">
           <ul class="navbar-nav navbar pe-5">
             <li class="nav-item"><a href="#" class="nav-link">Inicio</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Quienes somos</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Destacados</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+            <li class="nav-item d-none d-sm-block"><a href="#aboutus" class="nav-link">Quienes somos</a></li>
+            <li class="nav-item"><a href="#feature" class="nav-link">Destacados</a></li>
+            <li class="nav-item"><a href="#contact" class="nav-link">Contacto</a></li>
           </ul>
         </div>
       </div>
@@ -75,7 +72,7 @@
     </div>
   </section>
   <!--seccion presentación-->
-  <section>
+  <section id="aboutus" class="d-none d-sm-block">
     <h1 class="title">¿Quiénes Somos?</h1>
     <div class="container">
       <div class="row ">
@@ -114,10 +111,10 @@
     </div>
   </section>
   <!--Destacados-CARDS-->
-  <section class="container">
+  <section class="container mobile-padding" id="feature">
     <h1 class="title">Destacados</h1>
     <div class="row">
-      <div class="col">
+      <div class="col-12 col-lg-3 mt-5">
         <div class="card" style="width: 18rem;">
           <img src="/assets/img/card1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -127,7 +124,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-12 col-lg-3 mt-5">
         <div class="card" style="width: 18rem;">
           <img src="/assets/img/card2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -137,7 +134,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-12 col-lg-3 mt-5">
         <div class="card" style="width: 18rem;">
           <img src="/assets/img/card3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -147,7 +144,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-12 col-lg-3 mt-5">
         <div class="card" style="width: 18rem;">
           <img src="/assets/img/card4.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -163,7 +160,7 @@
   </section>
 
   <!--Contacto-Formulario-->
-  <section class="container">
+  <section class="container mobile-padding" id="contact">
     <h1 class="title">Contacto</h1>
     <hr>
     <form>
@@ -179,15 +176,17 @@
         <label for="exampleInputcontent" class="form-label">Mensaje</label>
         <textarea type="text" class="form-control" id="input-content" rows="4"></textarea>
       </div>
-      <button type="submit" class="btn">Enviar</button>
+      <button type="submit" class="btn submit" data-bs-toggle="tooltip" data-bs-placement="top"
+      data-bs-custom-class="custom-tooltip"
+      data-bs-title="Envia tu formulario">Enviar</button>
     </form>
   </section>
   <footer>
     <div class="row">
-      <div class="col">
+      <div class="col-12 col-lg-6 mt-5">
         <h4>Viajes Chile</h4>
       </div>
-      <div class="col footer-icon">
+      <div class="col-12 col-lg-6 mt-5 footer-icon">
         <a href="https://github.com/" Target="_blank"><i class="fa-brands fa-github"></i></a>
         <a href="https://www.linkedin.com/" Target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
         <a href="https://twitter.com/" Target="_blank"><i class="fa-brands fa-twitter"></i></a>
@@ -195,6 +194,8 @@
       </div>
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
   <script src="/assets/js/script.js"></script>
 </body>
 </html>
