--- a/viajes.html
+++ b/viajes.html
@@ -114,7 +114,7 @@
   <section class="container mobile-padding" id="feature">
     <h1 class="title">Destacados</h1>
     <div class="row">
-      <div class="col-12 col-lg-3 mt-5">
+      <div class="col-12 col-md-6 col-lg-3">
         <div class="card" style="width: 18rem;">
           <img src="/assets/img/card1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -124,7 +124,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-lg-3 mt-5">
+      <div class="col-12 col-md-6 col-lg-3">
         <div class="card" style="width: 18rem;">
           <img src="/assets/img/card2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -134,7 +134,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-lg-3 mt-5">
+      <div class="col-12 col-md-6 col-lg-3">
         <div class="card" style="width: 18rem;">
           <img src="/assets/img/card3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -144,7 +144,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-lg-3 mt-5">
+      <div class="col-12 col-md-6 col-lg-3">
         <div class="card" style="width: 18rem;">
           <img src="/assets/img/card4.jpg" class="card-img-top" alt="...">
           <div class="card-body">
