--- a/viajes.html
+++ b/viajes.html
@@ -80,19 +80,13 @@
           <div class="icon">
             <i class="fa-solid fa-plane"></i>
           </div>
-          <p class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid beatae, exercitationem
-            nihil consequatur sequi voluptatum corporis necessitatibus, magni similique praesentium nam eaque fugit
-            neque voluptatem assumenda quam, alias dolor molestias. Lorem ipsum, dolor sit amet consectetur adipisicing
-            elit. Velit ut, expedita possimus tempore atque rem placeat nesciunt odio sint repudiandae delectus autem
-            eius? Adipisci odit eligendi, officiis doloribus iusto minus.</p>
+          <p class="about-text">MÁS DE 20 AÑOS DE EXPERIENCIA<br>
+            Caracterizados por nuestra experiencia, con más de 20 años entregando excelencia en el rubro; miles de clientes satisfechos que avalan nuestros servicios, podemos decir que entregamos un producto de calidad inigualable. Viajes exitosos a más de 85 países, con variedad de itinerarios. Creamos programas especializados de primer nivel, con trayectos y paradas altamente enriquecedoras.</p>
         </div>
         <div class="col">
 
-          <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sunt rerum aliquid
-            dolores. Tempora qui corrupti dolorem vero, sequi consequuntur eligendi! Aliquid cupiditate facere est
-            placeat culpa animi quod repellat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur
-            quasi hic dolor itaque inventore officiis deleniti quibusdam temporibus eaque esse in porro enim, quaerat
-            veniam molestias assumenda odio, dolorem maiores.</p>
+          <p class="about-text">Nuestra visión es que el turismo puede convertirse en el tercer sector de actividad económica más importante de Chile, en términos de creación de empleo, generación de pequeñas y medianas empresas, desarrollo regional equilibrado, diversificación de las fuentes de divisas y contribución al Producto Interno Bruto. Unir a la industria privada del turismo para definir y ejecutar junto al Estado las acciones que hagan del turismo
+          </p>
             <div class="icon">
               <i class="fa-solid fa-mountain"></i>
             </div>
@@ -101,11 +95,8 @@
           <div class="icon">
           <i class="fa-solid fa-route"></i>
           </div>
-          <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo consequatur, porro
-            perferendis impedit, nobis, voluptatibus maiores ad rerum voluptate eum eaque accusantium libero eveniet
-            delectus facilis dignissimos. Quisquam, sit! Ratione. Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Explicabo ipsa provident quaerat sequi itaque quod, illum aliquam nam optio pariatur possimus aliquid
-            accusantium. Eveniet odio debitis at, tempore est voluptatum!</p>
+          <p class="about-text">MÁS DE 400 VIAJES.<br>Somos especialistas en viajes con un enfoque religioso y cultural. Nuestros programas son preparados meticulosamente, para maximizar la comodidad, permitiendo a nuestros clientes ¡Disfrutar del viaje!
+            Si viajas una vez con nosotros, lo volverás a hacer, te lo garantizamos. Nuestros índices de satisfacción al cliente son nuestra mayor virtud, y es algo en lo que trabajamos día a día.</p>
         </div>
       </div>
     </div>
@@ -119,8 +110,7 @@
           <img src="/assets/img/card1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Rio Montañoso</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+            <p class="card-text">El lago Enol es un pequeño lago de montaña del norte de España, localizado en los Picos de Europa, en la cordillera Cantábrica.</p>
           </div>
         </div>
       </div>
@@ -129,8 +119,7 @@
           <img src="/assets/img/card2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Lago y Montaña</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+            <p class="card-text">Los lagos son cuerpos de agua que se encuentran rodeados de tierra. Un lago puede contener aguas dulces o bien saladas</p>
           </div>
         </div>
       </div>
@@ -139,8 +128,7 @@
           <img src="/assets/img/card3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Laguina Desertica</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+            <p class="card-text">Un desierto en el cual se pueden encontrar agua y vegetación. Suelen constituir porciones más o menos extensas.</p>
           </div>
         </div>
       </div>
@@ -149,8 +137,7 @@
           <img src="/assets/img/card4.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Selva Amazonica</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+            <p class="card-text">Área cubierta principalmente de bosque tropical húmedo denso, con porciones pequeñas de tipos distintos de vegetación como sabanas.</p>
           </div>
         </div>
       </div>
